static/css/custom.css
body,
h1,
h2,
.container {
  font-family: Open Sans !important; }

.center {
  text-align: center; }

.left {
  float: left !important; }

.left-align {
  text-align: left !important; }

.right {
  float: right !important; }

.auto-width {
  width: auto !important; }

.logo {
  font-size: 1.5em !important;
  margin-left: 2px !important;
  float: right !important;
  margin-top: 0.1em !important; }

.navbar {
  -webkit-border-radius: 0px !important;
  -moz-border-radius: 0px !important;
  border-radius: 0px !important; }

.navbar-nav > li > a {
  font-size: 1em !important; }

.custom-nav {
  background: #3949AB !important;
  color: #FFFFFF !important;
  padding: 0 1.2em !important; }

.custom-nav a {
  color: #FFFFFF !important; }

.nav-link:hover {
  height: 70px !important; }

.nav-link:focus,
.nav-link:hover {
  color: #3949AB !important;
  background: #FFF !important; }

.navbar-toggler {
  border-color: #FFF !important;
  border: 1px solid rgba(255, 255, 255, 0.5) !important;
  margin-bottom: 1% !important; }

.navbar-toggler-icon {
  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important; }

.boldtext,
.font-weight-bold {
  font-weight: bold;
  color: #555555 !important; }

hr {
  border-top: 1px solid #cccccc !important; }

@media only screen and (max-width: 992px) {
  #navbarNav {
    background: #EAEAEA !important;
    margin-top: -0.9em !important;
    margin-left: -15px !important;
    margin-right: -15px !important;
    z-index: 1 !important; }
  #navbarNav .nav-link {
    color: black !important;
    padding-left: 2%;
    border-bottom: 2px solid #fff !important;
    padding-bottom: 3%;
    margin-bottom: 1%;
    height: 5em; }
  .custom-button {
    padding-top: 0.6em !important; } }

@media only screen and (max-width: 767px) {
  .featured-projects {
    margin-top: 3% !important; } }

@media (min-width: 576px) and (max-width: 767px) {
  .nsb-tasks {
    margin-top: 3% !important; } }

@media only screen and (max-width: 332px) {
  .nsb-tasks {
    margin-top: 3% !important; } }

.spacing {
  margin: 2.5% 0 !important; }

.featured-break {
  margin-bottom: 4.4% !important; }

.priorities {
  color: #000000 !important;
  font-style: normal !important; }

.form-box {
  padding: 5% !important; }

.create > span > a {
  text-decoration: underline !important; }

.fab {
  font-size: 1.5em !important; }

.no-content > .far {
  font-size: 7em !important;
  margin: 2% 0 !important; }

.breadcrumbs {
  margin-top: 1em !important; }

.breadcrumb-type {
  font-style: normal;
  font-weight: 600; }

.custom-button {
  border: none !important;
  -webkit-border-radius: 0px !important;
  -moz-border-radius: 0px !important;
  border-radius: 0px !important;
  color: #FFFFFF !important;
  font-weight: 600 !important; }

.edit-options-button {
  background: #03A9F4 !important; }

.delete-cancel-button {
  background: #f44336 !important; }

.new-save-button {
  background: #8BC34A !important; }

.warning-button {
  background: #FF5722 !important; }

.search-button {
  float: right !important;
  margin-top: 2% !important;
  background: #009688 !important; }

.cart-fix {
  overflow: hidden !important;
  clear: both !important;
  vertical-align: middle !important; }

.menu-icon {
  margin-right: 0.2em !important; }

.page-icon {
  margin: -3px 2px 0 0 !important; }

.cart-left {
  margin-right: 2% !important; }

.auto-width:hover {
  background-color: #3949AB !important;
  color: #FFF !important; }

.page-title {
  margin: 1.2em 0 !important; }

main {
  flex: 1 0 auto !important; }

.account-logo {
  font-size: 1.2em !important;
  margin-left: 2px !important;
  margin-top: 0.1em !important; }

.credentials {
  background-color: #3949AB !important;
  text-align: center !important; }

.login-heading {
  font-weight: 500 !important;
  color: #FFFFFF !important; }

.credential-list {
  display: inline-block !important;
  padding: 32px 48px 0px 48px !important;
  border: 1px solid #EEE !important;
  background: #FFF !important; }

.title h1 {
  color: #FFFFFF !important;
  text-align: center !important; }

.user-action-link a {
  color: #FFFFFF !important; }

.forgot-password {
  margin-top: 3% !important; }

.forgot-password a {
  font-size: 0.8em !important;
  font-weight: 600 !important; }

.active {
  display: none !important; }

#id_username_or_email,
#id_password {
  margin: 2em 0 !important; }

.featured-box {
  -webkit-border-radius: 5px !important;
  -moz-border-radius: 5px !important;
  border-radius: 5px !important;
  background: #F1F8E9 !important;
  border: 3px solid #DCEDC8 !important;
  margin: 1% !important;
  padding: 5% !important;
  min-height: 555px !important; }

.dashboard-heading {
  margin-top: 1em !important; }

.dashboard-brand {
  font-size: 2.1rem !important; }

.dashboard-brand > .logo {
  margin-top: -0.2em !important; }

.user_image {
  width: 40px !important; }

.profile-info > p {
  padding-bottom: 0 !important; }

.product {
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  height: 250px;
  margin: 0 auto; }

.project-container {
  text-align: center;
  padding: 2%;
  margin-bottom: 5%;
  -webkit-border-radius: 5px !important;
  -moz-border-radius: 5px !important;
  border-radius: 5px !important;
  background: #F1F8E9 !important;
  border: 3px solid #DCEDC8 !important; }

.project-icon > .fas {
  font-size: 5em !important;
  margin-bottom: 2% !important;
  margin-left: 5%; }

.project-view-icon > .fas {
  font-size: 9em !important;
  margin-bottom: 1% !important; }

/*For Image Upload Field*/
input[name="screenshot"],
input[name="picture"] {
  padding-bottom: 47px !important; }

.screenshot {
  width: 15em !important;
  height: 15em !important;
  background-size: cover !important;
  background-position: center !important;
  margin-bottom: 5% !important; }

.screenshot-image {
  width: 100%; }

.icon-screenshot {
  width: 150px !important;
  height: 150px !important;
  padding: 1%; }

.task-list {
  margin: 5% !important;
  -webkit-border-radius: 5px !important;
  -moz-border-radius: 5px !important;
  border-radius: 5px !important;
  background: #F1F8E9 !important;
  border: 3px solid #DCEDC8 !important;
  padding: 2%; }

.task-info {
  float: left;
  padding-right: 6%;
  padding-top: 2.5%; }

.task-description {
  margin-top: 5%; }

.task-screenshot > .screenshot-container {
  width: 150px !important;
  height: 150px !important;
  overflow: hidden; }

.screenshot-background {
  background-size: cover !important;
  height: 150px; }

